--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dspy-ai>=2.6.21",
     "openai>=1.76.0",
     "psutil>=7.0.0",
     "python-dotenv>=1.1.0",
