--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dspy>=2.6.21",
     "dspy-ai>=2.6.21",
     "ipykernel>=6.29.5",
+    "nbconvert>=7.16.6",
     "openai>=1.76.0",
     "psutil>=7.0.0",
     "python-dotenv>=1.1.0",
