--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "psutil>=7.0.0",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "youtube-transcript-api>=1.1.0",
 ]
